force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <label>Leave Balance</label>
    <pluralLabel>Leave Balances</pluralLabel>
    <nameField>
        <displayFormat>LB-{0000}</displayFormat>
        <label>Leave Balance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>