force-app/main/default/objects/Leave_Balance__c/fields/Annual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave__c</fullName>
    <label>Annual Leave</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>