force-app/main/default/objects/Leave_Balance__c/fields/Casual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Casual_Leave__c</fullName>
    <label>Casual Leave</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>