force-app/main/default/objects/Leave_Balance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
   <relationshipLabel>Leave Balances</relationshipLabel>
<relationshipName>LeaveBalances</relationshipName>
    <type>Lookup</type>
</CustomField>